componente de skills

--- a/src/app/components/tecnologias/tecnologias.component.html
+++ b/src/app/components/tecnologias/tecnologias.component.html
@@ -1,6 +1,10 @@
-<div>
+<div class="container-title">
+    <h2>SKILLS:</h2>
+</div>
+<div class="row">
     <app-tecnologia-item
         *ngFor="let tecnologia of tecnologias"
         [tecnologia]="tecnologia"
+        class="col-4"
     ></app-tecnologia-item>
 </div>
