--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -1,7 +1,7 @@
 /* ------------------------- CONTAINER COMPONENT ------------------------ */
 .container-about {
     display: flex;
-    align-items: start;
+    align-items: flex-start;
     justify-content: center;
     flex-direction: column;
 }
