--- a/src/app/components/tecnologia-item/tecnologia-item.component.html
+++ b/src/app/components/tecnologia-item/tecnologia-item.component.html
@@ -1,3 +1,16 @@
 <div>
-    <h3>{{tecnologia.name}}</h3>
+    <mat-card class="card-skill">
+        <mat-card-header class="card-header">
+            <mat-card-title class="card-title">{{tecnologia.name}}</mat-card-title>
+        </mat-card-header>
+        <mat-card-content class="card-content">
+            <mat-progress-spinner
+                color="primary"
+                value="{{tecnologia.skillValue}}"
+                title="{{tecnologia.skillValue}}"
+            >
+            </mat-progress-spinner>
+        </mat-card-content>
+        <!-- <p>{{tecnologia.skillValue}}%</p> -->
+    </mat-card>
 </div>
