agregado de gh-pages

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,7 +10,7 @@
                 href="https://www.instagram.com/pablo.barcala/"
                 title="Instagram"
             >
-                <i class="fa-brands fa-instagram icon"></i>
+                <i class="fa-brands fa-instagram icon icon__instagram"></i>
             </a>
             <a 
                 rel="noopener" 
@@ -18,7 +18,7 @@
                 href="https://github.com/pablobarcala"
                 title="Github"
             >
-                <i class="fa-brands fa-github icon"></i>
+                <i class="fa-brands fa-github icon icon__github"></i>
             </a>
             <a 
                 rel="noopener" 
@@ -26,7 +26,7 @@
                 href="https://www.linkedin.com/in/pablo-dami%C3%A1n-barcala-60a1a923a/"
                 title="Linkedin"
             >
-                <i class="fa-brands fa-linkedin icon"></i>
+                <i class="fa-brands fa-linkedin icon icon__linkedin"></i>
             </a>
         </div>
         <button routerLink="login" mat-flat-button color="accent">LOGIN</button>
