--- a/src/app/components/tecnologias/tecnologias.component.html
+++ b/src/app/components/tecnologias/tecnologias.component.html
@@ -5,6 +5,6 @@
     <app-tecnologia-item
         *ngFor="let tecnologia of tecnologias"
         [tecnologia]="tecnologia"
-        class="col-4"
+        class="col-4 tec-item"
     ></app-tecnologia-item>
 </div>
