--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -20,8 +20,9 @@
 h2 { 
     display: inline-block;
     cursor: pointer;
-    font-size: 1.25rem;
+    font-size: 1.3rem;
     font-weight: 700;
+    font-family:'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 /* ---------------------- ESTILOS PARA EL CONTENEDOR DEL MENU ------------------------- */
@@ -38,9 +39,21 @@ a {
 }
 
 .icon {
-    font-size: 1.1rem;
+    font-size: 1.3rem;
     margin: 0 0.4rem;
     cursor: pointer;
+}
+
+.icon__instagram:hover {
+    color: #e1306c;
+}
+
+.icon__github:hover {
+    color: #6e5494;
+}
+
+.icon__linkedin:hover {
+    color: #0077b5;
 }
 
 button {
