--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -14,7 +14,6 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    border-radius: 0;
     padding-bottom: 2%;
 }
 
@@ -26,13 +25,13 @@
 }
 
 .card-profile {
-    width: 70%;
+    width: 12rem;
     border-radius: 50%;
 }
 
 .card-title {
     font-size: 2.5rem;
-    margin: 3% 0;
+    margin: 1rem 0;
 }
 
 .card-subtitle {
