--- a/src/app/components/tecnologias/tecnologias.component.html
+++ b/src/app/components/tecnologias/tecnologias.component.html
@@ -1,10 +1,10 @@
 <div class="container-title">
     <h2>SKILLS:</h2>
 </div>
-<div class="row">
+<div class="row container-tec">
     <app-tecnologia-item
         *ngFor="let tecnologia of tecnologias"
         [tecnologia]="tecnologia"
-        class="col-4 tec-item"
+        class="col-sm-4 col-6 tec-item"
     ></app-tecnologia-item>
 </div>
