--- a/src/app/components/education-item/education-item.component.css
+++ b/src/app/components/education-item/education-item.component.css
@@ -1,6 +1,6 @@
 .card {
-    padding: 0 1.5%;
-    margin-bottom: 1%;
+    padding: 0 0.7rem;
+    margin-bottom: 1rem;
     width: 100%;
 }
 
@@ -13,17 +13,21 @@
 .avatar {
     background-image: url('../../../assets/images/edu.jpg');
     background-size: cover;
-    margin: 0 1% 0 0;
+    margin: 0 1rem 0 0;
 }
 
 .card__title {
     font-size: 1.2rem;
 }
 
+.card__subtitle {
+    font-size: 0.75rem;
+}
+
 .card__content__title {
     font-size: 1rem;
-    font-weight: 500;
-    margin-top: 1.3%;
+    font-weight: 600;
+    margin-top: 1.3rem;
 }
 
 .card__content__description {
