--- a/src/app/components/education-item/education-item.component.html
+++ b/src/app/components/education-item/education-item.component.html
@@ -4,7 +4,7 @@
             <div mat-card-avatar class="avatar"></div>
             <mat-card-title-group>
                 <mat-card-title class="card__title">{{education.name}}</mat-card-title>
-                <mat-card-subtitle>{{education.titulo}}</mat-card-subtitle>
+                <mat-card-subtitle class="card__subtitle">{{education.titulo}}</mat-card-subtitle>
             </mat-card-title-group>
         </mat-card-header>
         <mat-card-content>
