--- a/src/app/components/experiencias/experiencias.component.css
+++ b/src/app/components/experiencias/experiencias.component.css
@@ -1,5 +1,5 @@
 .container-exp {
-    padding: 0 1.5%;
+    padding: 0 1.5rem;
 }
 
 .container-title {
@@ -16,3 +16,16 @@
     color: #fff;
 }
 
+/* ----------------------------- MEDIA QUERIES ----------------------------- */
+
+@media (max-width: 992px) {
+    .container-title {
+        width: 30%;
+    }
+}
+
+@media (max-width: 475px) {
+    .container-title {
+        width: 40%;
+    }
+}
