--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -3,7 +3,7 @@
 .header {
     width: 100%;
     background-color: #000;
-    padding: 1.5%;
+    padding: 1.5rem;
     color: #fff;
     display: flex;
     align-items: center;
@@ -59,3 +59,11 @@ a {
 button {
     font-size: 0.1rem;
 }
+
+/* ------------------------ MEDIA QUERIES ------------------------ */
+
+@media (max-width: 575px) {
+    .contenedor-iconos {
+        display: none;
+    }
+} 
