--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,8 @@
 <div class="header row">
-    <div class="title col-9">
+    <div class="title col-10 col-sm-7 col-md-8 col-lg-9">
         <h2 routerLink="">Portfolio - Pablo Barcala</h2>
     </div>
-    <div class="contenedor-menu col-3">
+    <div class="contenedor-menu col-2 col-sm-5 col-md-4 col-lg-3">
         <div class="contenedor-iconos">
             <a 
                 rel="noopener" 
@@ -29,6 +29,17 @@
                 <i class="fa-brands fa-linkedin icon icon__linkedin"></i>
             </a>
         </div>
-        <button routerLink="login" mat-flat-button color="accent">LOGIN</button>
+        <button 
+            routerLink="login" 
+            mat-flat-button 
+            color="accent"
+            *ngIf="!authService.logIn"
+        >LOGIN</button>
+        <button 
+            mat-flat-button 
+            color="accent"
+            *ngIf="authService.logIn"
+            (click)="authService.logout()"
+        >LOGOUT</button>
     </div>
 </div>
