--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,33 @@
-<p>login works!</p>
+<div class="container-login">
+    <mat-card class="card-login">
+        <mat-card-header class="card-header">
+            <mat-card-title class="card-title">LOGIN</mat-card-title>
+        </mat-card-header>
+        <form [formGroup]="form" (submit)="onSubmit()" class="card-form">
+            <mat-form-field appearance="outline" class="card-form__input">
+                <mat-label>Ingrese su username</mat-label>
+                <input 
+                    matInput 
+                    placeholder="Username" 
+                    type="text"
+                    formControlName="username"
+                >
+            </mat-form-field>
+            <mat-form-field appearance="outline" class="card-form__input">
+                <mat-label>Ingrese su contraseña</mat-label>
+                <input 
+                    matInput 
+                    placeholder="Password" 
+                    type="password"
+                    formControlName="password"
+                >
+            </mat-form-field>
+            <button 
+                mat-raised-button 
+                color="primary"
+                type="submit"
+                class="card-form__button" 
+            >LOGIN</button>
+        </form>
+    </mat-card>
+</div>
