--- a/src/app/components/tecnologia-item/tecnologia-item.component.css
+++ b/src/app/components/tecnologia-item/tecnologia-item.component.css
@@ -2,12 +2,12 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    margin-bottom: 5%;
+    margin-bottom: 1rem;
 }
 
 .card-header {
     width: 100%;
-    padding: 3%;
+    padding: 0.7rem;
     display: flex;
     justify-content: center;
     background-color: rgb(241, 226, 255);
@@ -15,9 +15,9 @@
 }
 
 .card-title {
-    font-size: 1.6rem;
+    font-size: 1rem;
 }
 
 .card-content {
-    padding: 5%;
+    padding: 1.2rem;
 }
