--- a/src/app/components/tecnologias/tecnologias.component.css
+++ b/src/app/components/tecnologias/tecnologias.component.css
@@ -13,5 +13,19 @@
 }
 
 .tec-item {
-    padding: 0 1.5%;
+    padding: 0 1.5rem;
+}
+
+/* ----------------------------- MEDIA QUERIES ----------------------------- */
+
+@media (max-width: 992px) {
+    .container-title {
+        width: 30%;
+    }
+}
+
+@media (max-width: 475px) {
+    .container-title {
+        width: 40%;
+    }
 }
