--- a/src/styles.css
+++ b/src/styles.css
@@ -25,5 +25,23 @@ h2,p {
         font-size: 20px;
     }
 }
+
+@media (max-width: 992px) {
+    * {
+        font-size: 18px;
+    }
+}
+
+@media (max-width: 768px) {
+    * {
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 576px) {
+    * {
+        font-size: 14px;
+    }
+}
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
