--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="header row">
     <div class="title col-10 col-sm-7 col-md-8 col-lg-9">
-        <h2 routerLink="">Portfolio - Pablo Barcala</h2>
+        <h2 routerLink="">Portfolio</h2>
     </div>
     <div class="contenedor-menu col-2 col-sm-5 col-md-4 col-lg-3">
         <div class="contenedor-iconos">
