--- a/src/app/components/compsExperiencia/experiencia-item/experiencia-item.component.css
+++ b/src/app/components/compsExperiencia/experiencia-item/experiencia-item.component.css
@@ -11,7 +11,7 @@
 }
 
 .avatar {
-    background-image: url('../../../assets/images/exp.jpg');
+    background-image: url('../../../../assets/images/exp.jpg');
     background-size: cover;
     margin: 0 1rem 0 0;
 }
