Agregando componente de proyectos

--- a/src/app/components/compsExperiencia/experiencia-control/experiencia-control.component.html
+++ b/src/app/components/compsExperiencia/experiencia-control/experiencia-control.component.html
@@ -16,7 +16,7 @@
             </div>
             <div class="card-buttons">
                 <i class="fa-regular fa-edit button"></i>
-                <i class="fa-solid fa-times button"></i>
+                <i class="fa-solid fa-times button" (click)="onDelete(experiencia)"></i>
             </div>
         </div>
     </mat-card>
