--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,4 +3,5 @@
     <app-educations></app-educations>
     <app-experiencias></app-experiencias>
     <app-tecnologias></app-tecnologias>
+    <app-projects></app-projects>
 </div>
