--- a/src/app/components/compsEducation/education-control/education-control.component.html
+++ b/src/app/components/compsEducation/education-control/education-control.component.html
@@ -8,11 +8,11 @@
     </div>
     <mat-card *ngFor="let education of educations" class="card-item">
         <mat-card-header class="card-header">
-            <mat-card-title>{{education.name}}</mat-card-title>
+            <mat-card-title>{{education.nombreInstituto}}</mat-card-title>
         </mat-card-header>
         <div class="card-container">
             <div class="card-description">
-                <p>{{education.description}}</p>
+                <p>{{education.descripcion}}</p>
             </div>
             <div class="card-buttons">
                 <i class="fa-regular fa-edit button"></i>
