--- a/src/app/components/compsExperiencia/experiencia-control/experiencia-control.component.html
+++ b/src/app/components/compsExperiencia/experiencia-control/experiencia-control.component.html
@@ -8,11 +8,11 @@
     </div>
     <mat-card *ngFor="let experiencia of experiencias" class="card-item">
         <mat-card-header class="card-header">
-            <mat-card-title>{{experiencia.name}}</mat-card-title>
+            <mat-card-title>{{experiencia.puesto}}</mat-card-title>
         </mat-card-header>
         <div class="card-container">
             <div class="card-description">
-                <p>{{experiencia.description}}</p>
+                <p>{{experiencia.descripcion}}</p>
             </div>
             <div class="card-buttons">
                 <i class="fa-regular fa-edit button"></i>
