--- a/src/app/components/compsExperiencia/experiencia-item/experiencia-item.component.html
+++ b/src/app/components/compsExperiencia/experiencia-item/experiencia-item.component.html
@@ -3,12 +3,12 @@
         <mat-card-header class="card__header">
             <div mat-card-avatar class="avatar"></div>
             <mat-card-title-group>
-                <mat-card-title class="card__title">{{experiencia.name}}</mat-card-title>
+                <mat-card-title class="card__title">{{experiencia.puesto}}</mat-card-title>
             </mat-card-title-group>
         </mat-card-header>
         <mat-card-content>
             <h3 class="card__content__title">Descripción:</h3>
-            <p class="card__content__description">{{experiencia.description}}</p>
+            <p class="card__content__description">{{experiencia.descripcion}}</p>
         </mat-card-content>
     </mat-card>
 </div>
