--- a/src/app/components/compsProject/project-control/project-control.component.html
+++ b/src/app/components/compsProject/project-control/project-control.component.html
@@ -8,11 +8,11 @@
     </div>
     <mat-card *ngFor="let project of projects" class="card-item">
         <mat-card-header class="card-header">
-            <mat-card-title>{{project.name}}</mat-card-title>
+            <mat-card-title>{{project.nombreProyecto}}</mat-card-title>
         </mat-card-header>
         <div class="card-container">
             <div class="card-description">
-                <p>{{project.description}}</p>
+                <p>{{project.descripcion}}</p>
             </div>
             <div class="card-buttons">
                 <i class="fa-regular fa-edit button"></i>
