--- a/src/app/components/compsEducation/education-item/education-item.component.html
+++ b/src/app/components/compsEducation/education-item/education-item.component.html
@@ -3,13 +3,13 @@
         <mat-card-header class="card__header">
             <div mat-card-avatar class="avatar"></div>
             <mat-card-title-group>
-                <mat-card-title class="card__title">{{education.name}}</mat-card-title>
-                <mat-card-subtitle class="card__subtitle">{{education.titulo}}</mat-card-subtitle>
+                <mat-card-title class="card__title">{{educacion.nombreInstituto}}</mat-card-title>
+                <mat-card-subtitle class="card__subtitle">{{educacion.titulo}}</mat-card-subtitle>
             </mat-card-title-group>
         </mat-card-header>
         <mat-card-content>
             <h3 class="card__content__title">Descripción:</h3>
-            <p class="card__content__description">{{education.description}}</p>
+            <p class="card__content__description">{{educacion.descripcion}}</p>
         </mat-card-content>
     </mat-card>
 </div>
