--- a/src/app/components/compsExperiencia/experiencias/experiencias.component.html
+++ b/src/app/components/compsExperiencia/experiencias/experiencias.component.html
@@ -5,7 +5,7 @@
     <button 
         mat-flat-button 
         color="accent"
-        *ngIf="authService.logIn"
+        
         routerLink="experiencia"
     >
         <i class="fa-regular fa-edit"></i>
@@ -18,3 +18,6 @@
         [experiencia]="experiencia"
     ></app-experiencia-item>
 </div>
+
+
+<!-- *ngIf="authService.logIn" -->
