--- a/src/app/components/compsProject/projects/projects.component.html
+++ b/src/app/components/compsProject/projects/projects.component.html
@@ -5,7 +5,7 @@
     <button 
         mat-flat-button 
         color="accent"
-        *ngIf="authService.logIn"
+        
         routerLink="projects"
     >
         <i class="fa-regular fa-edit"></i>
@@ -14,8 +14,10 @@
 </div>
 <div class="container-exp">
     <app-project-item
-        *ngFor="let project of projects"
-        [project]="project"
+        *ngFor="let proyecto of proyectos"
+        [proyecto]="proyecto"
     ></app-project-item>
 </div>
 
+
+<!-- *ngIf="authService.logIn" -->
