--- a/src/app/components/compsTecnologia/tecnologia-item/tecnologia-item.component.html
+++ b/src/app/components/compsTecnologia/tecnologia-item/tecnologia-item.component.html
@@ -1,12 +1,12 @@
 <div>
     <mat-card class="card-skill">
         <mat-card-header class="card-header">
-            <mat-card-title class="card-title">{{tecnologia.name}}</mat-card-title>
+            <mat-card-title class="card-title">{{tecnologia.nombreTecnologia}}</mat-card-title>
         </mat-card-header>
         <mat-card-content class="card-content">
             <mat-progress-spinner
                 color="primary"
-                value="{{tecnologia.skillValue}}"
+                value="{{tecnologia.porcentaje}}"
             >
             </mat-progress-spinner>
         </mat-card-content>
