--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -10,7 +10,7 @@
                     matInput 
                     placeholder="Username" 
                     type="text"
-                    formControlName="username"
+                    formControlName="nombreUsuario"
                 >
             </mat-form-field>
             <mat-form-field appearance="outline" class="card-form__input">
