--- a/src/app/components/compsExperiencia/experiencias/experiencias.component.html
+++ b/src/app/components/compsExperiencia/experiencias/experiencias.component.html
@@ -5,7 +5,7 @@
     <button 
         mat-flat-button 
         color="accent"
-        
+        *ngIf="isAdmin"
         routerLink="experiencia"
     >
         <i class="fa-regular fa-edit"></i>
