--- a/src/app/components/compsProject/projects/projects.component.html
+++ b/src/app/components/compsProject/projects/projects.component.html
@@ -5,7 +5,7 @@
     <button 
         mat-flat-button 
         color="accent"
-        
+        *ngIf="isAdmin"
         routerLink="projects"
     >
         <i class="fa-regular fa-edit"></i>
@@ -18,6 +18,3 @@
         [proyecto]="proyecto"
     ></app-project-item>
 </div>
-
-
-<!-- *ngIf="authService.logIn" -->
