--- a/src/app/components/compsEducation/education-add/education-add.component.css
+++ b/src/app/components/compsEducation/education-add/education-add.component.css
@@ -11,7 +11,7 @@
 
 .form {
     display: flex;
-    align-items: start;
+    align-items: flex-start;
     flex-direction: column;
     padding: 1rem 0;
 }
