--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,3 +1,4 @@
+/* -------------------------- CONTAINER ----------------------- */
 .container-login {
     display: flex;
     align-items: center;
@@ -5,6 +6,7 @@
     padding: 5% 0;
 }
 
+/* -------------------------- CARD ----------------------- */
 .card-login {
     width: 50%;
     display: flex;
@@ -34,4 +36,17 @@
 
 .card-form__button {
     width: 40%;
+}
+
+/* -------------------------- MEDIA ----------------------- */
+@media (max-width: 768px) {
+    .card-login {
+        width: 80%;
+    }
+}
+
+@media (max-width: 575px) {
+    .card-login {
+        width: 100%;
+    }
 }
