--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -25,7 +25,7 @@
         </mat-expansion-panel>
     </mat-accordion>
 </div>
-<div>
+<!-- <div>
     <button
         mat-flat-button
         color="accent" 
@@ -36,4 +36,4 @@
         <i class="fa-regular fa-edit"></i>
         Agregar información personal
     </button>
-</div>
+</div> -->
