--- a/src/app/components/compsEducation/education-item/education-item.component.css
+++ b/src/app/components/compsEducation/education-item/education-item.component.css
@@ -5,7 +5,7 @@
 }
 
 .card__header {
-    margin-bottom: 1%;
+    margin-bottom: 0.5rem;
     display: flex;
     align-items: center;
 }
@@ -21,16 +21,79 @@
 }
 
 .card__subtitle {
-    font-size: 0.75rem;
+    font-size: 0.9rem;
 }
 
 .card__content__title {
     font-size: 1rem;
     font-weight: 600;
-    margin-top: 1.3rem;
+    margin-top: 1rem;
 }
 
 .card__content__description {
-    font-size: 0.8rem;
+    font-size:  0.8rem;
     font-weight: lighter;
+}
+
+.container_fecha {
+    padding: 2% 0;
+}
+
+.en_progreso {
+    margin: 0.5rem 0;
+    background-color: rgb(191, 216, 240);
+    text-align: center;
+    border-radius: 10px;
+}
+
+.en_progreso__desktop {
+    width: 20%;
+}
+
+.en_progreso__mobile {
+    width: 20%;
+    display: none;
+}
+
+
+/* ------------------------ MEDIA QUERIES ---------------------- */
+@media (max-width: 992px) {
+    .en_progreso__desktop {
+        width: 25%;
+    }
+}
+
+@media (max-width: 768px) {
+    .card__content__description {
+        font-size: 0.9rem;
+    }
+
+    .en_progreso__desktop {
+        display: none;
+    }
+
+    .en_progreso__mobile {
+        display: block;
+        width: 30%;
+    }
+}
+
+@media (max-width: 576px) {
+    .card__content__title {
+        font-size: 1.2rem;
+    }
+
+    .card__content__description{
+        font-size: 1.1rem;
+        font-weight: 400;
+    }
+
+    .container_fecha > span {
+        display: flex;
+        align-items: center;
+    }
+
+    .en_progreso__mobile {
+        width: 35%;
+    }
 }
