--- a/src/app/components/compsExperiencia/experiencia-item/experiencia-item.component.css
+++ b/src/app/components/compsExperiencia/experiencia-item/experiencia-item.component.css
@@ -5,7 +5,7 @@
 }
 
 .card__header {
-    margin-bottom: 1%;
+    margin-bottom: 0.5rem;
     display: flex;
     align-items: center;
 }
@@ -20,13 +20,67 @@
     font-size: 1.2rem;
 }
 
+.card__subtitle {
+    font-size: 0.9rem;
+}
+
 .card__content__title {
     font-size: 1rem;
     font-weight: 600;
-    margin-top: 1.3rem;
+    margin-top: 1rem;
 }
 
 .card__content__description {
-    font-size: 0.8rem;
+    font-size:  0.8rem;
     font-weight: lighter;
 }
+
+.actual {
+    margin: 0.5rem 0;
+    background-color: rgb(191, 216, 240);
+    text-align: center;
+    border-radius: 10px;
+    width: 20%;
+}
+
+.container_fecha {
+    padding: 2% 0;
+}
+
+/* ------------------------ MEDIA QUERIES ---------------------- */
+@media (max-width: 992px) {
+    .actual {
+        width: 25%;
+    }
+}
+
+@media (max-width: 768px) {
+    .card__content__description {
+        font-size: 0.9rem;
+    }
+    
+    .actual {
+        width: 30%;
+    }
+}
+
+@media (max-width: 576px) {
+    .card__content__title {
+        font-size: 1.2rem;
+    }
+
+    .card__content__description{
+        font-size: 1.1rem;
+        font-weight: 400;
+    }
+
+    .container_fecha > span {
+        display: flex;
+        align-items: center;
+    }
+
+    .actual {
+        width: 35%;
+    }
+}
+
