--- a/src/app/components/compsProject/project-control/project-control.component.html
+++ b/src/app/components/compsProject/project-control/project-control.component.html
@@ -1,25 +1,25 @@
-<mat-card class="container-list">
-    <div class="container-header">
-        <h2>Lista de elementos</h2>
-        <div class="container-header-buttons">
-            <button mat-flat-button color="primary">Agregar</button>
-            <button mat-flat-button color="warn" routerLink="">Volver</button>
-        </div>
-    </div>
-    <mat-card *ngFor="let project of projects" class="card-item">
-        <mat-card-header class="card-header">
-            <mat-card-title>{{project.nombreProyecto}}</mat-card-title>
-        </mat-card-header>
-        <div class="card-container">
-            <div class="card-description">
-                <p>{{project.descripcion}}</p>
-            </div>
-            <div class="card-buttons">
-                <i class="fa-regular fa-edit button"></i>
-                <i class="fa-solid fa-times button" (click)="onDelete(project)"></i>
+<div>
+    <mat-card class="container-list">
+        <div class="container-header">
+            <h2>Lista de elementos</h2>
+            <div class="container-header-buttons">
+                <button mat-flat-button color="primary" (click)="onAdd()">Agregar</button>
+                <button mat-flat-button color="warn" routerLink="">Volver</button>
             </div>
         </div>
+        <mat-card *ngFor="let project of projects" class="card-item">
+            <mat-card-header class="card-header">
+                <mat-card-title>{{project.nombreProyecto}}</mat-card-title>
+            </mat-card-header>
+            <div class="card-container">
+                <div class="card-description">
+                    <p>{{project.descripcion}}</p>
+                </div>
+                <div class="card-buttons">
+                    <i class="fa-regular fa-edit button"></i>
+                    <i class="fa-solid fa-times button" (click)="onDelete(project)"></i>
+                </div>
+            </div>
+        </mat-card>
     </mat-card>
-</mat-card>
-
-
+</div>
