--- a/src/app/components/compsProject/project-item/project-item.component.css
+++ b/src/app/components/compsProject/project-item/project-item.component.css
@@ -5,7 +5,7 @@
 }
 
 .card__header {
-    margin-bottom: 1%;
+    margin-bottom: 0.5rem;
     display: flex;
     align-items: center;
 }
@@ -23,10 +23,37 @@
 .card__content__title {
     font-size: 1rem;
     font-weight: 600;
-    margin-top: 1.3rem;
+    margin-top: 1rem;
 }
 
 .card__content__description {
     font-size: 0.8rem;
     font-weight: lighter;
+}
+
+.container_fecha {
+    padding: 2% 0;
+}
+
+/* ------------------------ MEDIA QUERIES ---------------------- */
+@media (max-width: 768px) {
+    .card__content__description {
+        font-size: 0.9rem;
+    }
+}
+
+@media (max-width: 576px) {
+    .card__content__title {
+        font-size: 1.2rem;
+    }
+
+    .card__content__description{
+        font-size: 1.1rem;
+        font-weight: 400;
+    }
+
+    .container_fecha > span {
+        display: flex;
+        align-items: center;
+    }
 }
